--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "eslint": "^9.32.0",
@@ -20,6 +20,5 @@
   },
   "dependencies": {
     "express": "^5.1.0"
-  },
-  "type ": "module"
+  }
 }
